# fraud-detection-system-kafka

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  read_alerts.py
lake/delta/transactions/: .part-00000-2a51544c-5003-485a-a1b2-22d711bd2e3d-c000.snappy.parquet.crc  .part-00011-013f6ed1-be31-4eac-8a13-8176b72278a9-c000.snappy.parquet.crc  .part-00011-02e90702-929d-4031-a338-ed94e0da3c24-c000.snappy.parquet.crc  .part-00011-035cba14-d819-4f60-b2a5-42f08bcda48c-c000.snappy.parquet.crc  .part-00011-038aee5a-97e7-4350-b136-cafe915415cd-c000.snappy.parquet.crc  .part-00011-0449fb67-3c00-49ef-ba0a-8075ee248277-c000.snappy.parquet.crc  .part-00011-05091a64-c884-420a-8dc0-20b9f9c35932-c000.snappy.parquet.crc  .part-00011-05d6a396-bbb8-4ae1-9a75-03d27db8b5ab-c000.snappy.parquet.crc  .part-00011-062c7756-a34a-424c-adb9-f1de37c375cc-c000.snappy.parquet.crc  .part-00011-079807cd-94b2-4a7e-a83e-4c0b6b676706-c000.snappy.parquet.crc  .part-00011-08a81edb-13ab-4e8d-ab39-91b537b2662f-c000.snappy.parquet.crc  .part-00011-08e2b5b6-290b-46e2-b956-c266a1efa3f4-c000.snappy.parquet.crc  .part-00011-092123fb-19db-4447-92e6-29cd71ef763f-c000.snappy.parquet.crc  .part-00011-09930730-60f7-4c81-be51-8f83a55d53fc-c000.snappy.parquet.crc  .part-00011-0a0f5c8d-617a-43eb-a983-3365b17f9df0-c000.snappy.parquet.crc  .part-00011-0a3d0641-dc26-4166-82da-d76f3e510cc2-c000.snappy.parquet.crc  (+604 more)
scripts/: generate_test_data.py  monitor.py  setup_topics.sh
src/fraud_detection/: __init__.py  main.py
src/fraud_detection/config/: logger_config.py  settings.py
tests/: __init__.py  conftest.py  test_alert_consumer_mock.py  test_audit_consumer_mock.py  test_avro_serializer.py  test_enrichment_processor.py  test_fraud_detection.py  test_fraud_detector_mock.py  test_fraud_rules_engine_more.py  test_helpers.py  test_producers.py  test_user_profile_producer_mock.py
(+686 files in other folders)
