[project]
name = "fraud-detection-system"
version = "1.0.0"
description = "Real-time fraud detection system using Apache Kafka"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "confluent-kafka>=2.3.0",
    "fastavro>=1.9.4",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "faker>=20.1.0",
    "rich>=13.7.0",
    "psutil>=5.9.6",
    "click>=8.1.7",
    "prometheus-client>=0.24.1",
    "fastapi>=0.128.8",
    "uvicorn>=0.39.0",
    "certifi>=2026.2.25",
    "httpx>=0.28.1",
    "authlib>=1.6.9",
    "delta-spark>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.scripts]
fraud-detect = "fraud_detection.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_detection"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/fraud_detection --cov-report=html"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.8",
]
